--- a/src/css/Card.css
+++ b/src/css/Card.css
@@ -26,6 +26,18 @@ font-weight: 700;
 line-height: normal;
 }
 
+.text17{
+    color: var(--FFFFFF, #FFF);
+    font-feature-settings: 'clig' off, 'liga' off;
+    
+    /* Heading L - Sans */
+    font-family: Inter;
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    }
+
 .text2{
 color: var(--A445ED, #A445ED);
 font-feature-settings: 'clig' off, 'liga' off;
@@ -69,6 +81,16 @@ line-height: normal;
 margin-left: 20px;
 }
 
+.text18{
+    color: var(--FFFFFF, #FFF);
+    font-family: Inter;
+    font-size: 24px;
+    font-style: italic;
+    font-weight: 700;
+    line-height: normal;
+    margin-left: 20px;
+    }
+
 .rectangle-Icon{
 width: 656px;
 height: 1px;
@@ -85,14 +107,13 @@ margin-top: 20px;
 .text4{
 color: var(--757575, #757575);
 font-feature-settings: 'clig' off, 'liga' off;
-
-/* Heading S - Sans */
 font-family: Inter;
 font-size: 20px;
 font-style: normal;
 font-weight: 400;
 line-height: normal;
 }
+
 
 .group6{
 width: 714px;
@@ -132,6 +153,16 @@ font-weight: 400;
 line-height: 24px; 
 }
 
+.text19{
+    color: var(--FFFFFF, #FFF);
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; 
+    }
+
 .group5{
 width: 714px;
 height: 72px;
@@ -140,16 +171,6 @@ display: flex;
 justify-content: space-between;
 align-items: center;
 margin-top: 10px;
-}
-
-.text6{
-color: var(--2D2D2D, #2D2D2D);
-font-feature-settings: 'clig' off, 'liga' off;
-font-family: Inter;
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height: 24px; 
 }
 
 .group19{
@@ -163,15 +184,6 @@ align-items: center;
 
 }
 
-.text7{
-color: var(--2D2D2D, #2D2D2D);
-font-feature-settings: 'clig' off, 'liga' off;
-font-family: Inter;
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height: 24px; /* 133.333% */
-}
 
 .group9{
 display: inline-flex;
@@ -221,6 +233,15 @@ flex-shrink: 0;
 
 .text10{
 color: var(--2D2D2D, #2D2D2D);
+font-family: Inter;
+font-size: 24px;
+font-style: italic;
+font-weight: 700;
+line-height: normal;
+}
+
+.text10a{
+color: var(--FFFFFF, #FFF);
 font-family: Inter;
 font-size: 24px;
 font-style: italic;
@@ -323,6 +344,19 @@ font-weight: 400;
 line-height: normal;
 text-decoration-line: underline;
 margin-left: 20px;
+}
+
+.text15a{
+color: var(--FFFFFF, #FFF);
+font-feature-settings: 'clig' off, 'liga' off;
+
+/* Body S - Sans */
+font-family: Inter;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+text-decoration-line: underline;
 }
 
 .Tabler-Icon{
