--- a/src/css/Navigation.css
+++ b/src/css/Navigation.css
@@ -4,6 +4,13 @@
   height: 36.5px;
   flex-shrink: 0;
   }
+
+  .book-dark-icon{
+    width: 32px;
+    height: 36.5px;
+    flex-shrink: 0;
+    color: white;
+  }
   
   .path-icon {
     width: 15px;
@@ -20,6 +27,17 @@
     font-weight: 700;
     line-height: 24px;
     margin-top: 15px;
+  }
+
+  .text16{
+color: var(--FFFFFF, #FFF);
+font-family: Inter;
+font-size: 18px;
+font-style: normal;
+font-weight: 700;
+line-height: 24px; /* 133.333% */
+margin-top: 15px;
+
   }
 
   .group10 {
