--- a/src/css/Navigation.css
+++ b/src/css/Navigation.css
@@ -99,8 +99,8 @@ flex-shrink: 0;
   }
 
   .group-icon {
-    width: 65px; /* Adjust the width for tablets */
-    height: 20px; /* Adjust the height for tablets */
+    width: 65px; 
+    height: 20px; 
   }
 
   .group13 {
