--- a/src/App.css
+++ b/src/App.css
@@ -4,14 +4,29 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 20px;
+  background: var(--FFFFFF, #f7f4f4);
   margin: auto;
-  background: var(--FFFFFF, #FFF);
+  margin-top: 50px;
+  border-radius: 16px;
+  width: 736px;
+  flex-shrink: 0;
+  
 }
 
 .App.dark{
+ 
   background: var(--050505, #050505);
   color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  margin-top: 50px;
+  border-radius: 16px;
+  width: 736px;
+  flex-shrink: 0;
+  
 }
 
 /* Media query for tablets (e.g., iPad) */
@@ -34,5 +49,3 @@
   }
 
 }
-
-
