--- a/src/css/Card.css
+++ b/src/css/Card.css
@@ -1,11 +1,4 @@
-.group17{
-    width: 90%;
-    height: 826px;
-    flex-shrink: 0;
-    margin: auto 352px;
-    margin-top: 50px;
-   
-}
+
 
 .group15{
     width: 90%;
@@ -444,11 +437,18 @@ margin-left: 10px;
 
 /* Media query for tablets (e.g., iPad) */
 @media (min-width: 768px) and (max-width: 1023px) {
-    .group17 {
-        width: 689px;
-        height: 826px;
-        flex-shrink: 0;
-    }
+
+
+  .responsive-container {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1440px; /* Adjust the max-width as needed */
+    font-family: 'Your-Font-Here', sans-serif; /* Specify the desired font family */
+    width: 90%;
+  }
+  
 
     .group15{
         width: 689px;
@@ -463,13 +463,7 @@ margin-left: 10px;
   
   /* Media query for mobile screens */
   @media (max-width: 767px) {
-    .group17 {
-      /* Adjust the styles for the group17 component on mobile screens */
-      width: 100%; /* Adjust the width for mobile screens */
-      margin: auto; /* Center the container horizontally and adjust the top margin */
-      flex-shrink: 0;
-      
-    }
+   
 
     
 
